--- a/pom.xml
+++ b/pom.xml
@@ -3,4 +3,22 @@
   <groupId>com.vash.StarDB</groupId>
   <artifactId>StarDB</artifactId>
   <version>0.0.1-SNAPSHOT</version>
+  
+  <dependencies>
+  	<!-- https://mvnrepository.com/artifact/junit/junit -->
+	<dependency>
+    	<groupId>junit</groupId>
+    	<artifactId>junit</artifactId>
+    	<version>4.12</version>
+	</dependency>
+	<!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
+	<dependency>
+    	<groupId>mysql</groupId>
+    	<artifactId>mysql-connector-java</artifactId>
+    	<version>5.1.42</version>
+	</dependency>
+	
+  </dependencies>
+  
+  
 </project>
